[package]
name = "redox_uefi_alloc"
version = "0.1.0"
edition = "2018"
description = "UEFI allocation support"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/uefi_alloc"

[lib]
name = "uefi_alloc"

[dependencies]
redox_uefi = "0.1.2"
