[package]
name = "redox_uefi_std"
version = "0.1.8"
edition = "2018"
description = "UEFI standard library"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/uefi"

[lib]
name = "uefi_std"

[dependencies]
redox_uefi = { path = "../uefi", version = "0.1.8" }
redox_uefi_alloc = { path = "../uefi_alloc", version = "0.1.8" }
