[package]
name = "redox_uefi_std"
version = "0.1.11"
edition = "2021"
description = "UEFI standard library"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/uefi"

[lib]
name = "uefi_std"

[dependencies]
redox_uefi = { path = "../uefi", version = "0.1.11" }
redox_uefi_alloc = { path = "../uefi_alloc", version = "0.1.11" }
